[gd_scene load_steps=8 format=3 uid="uid://dshnudx3xoewj"]

[ext_resource type="Theme" uid="uid://xf3txcnn1n8d" path="res://theming/theme.tres" id="1_gc0em"]
[ext_resource type="Script" uid="uid://b3o3drpg8jm68" path="res://scripts/settings.gd" id="1_x2hje"]
[ext_resource type="Texture2D" uid="uid://lpt4k0ja3geq" path="res://icons/1x/checkmark_1x.png" id="2_3ykye"]
[ext_resource type="Texture2D" uid="uid://qtbq2osqx4v2" path="res://icons/1x/return_1x.png" id="2_nkug2"]
[ext_resource type="Texture2D" uid="uid://di81c11ykk7nr" path="res://icons/17px/yellow_tick.png" id="3_3j6r5"]
[ext_resource type="Texture2D" uid="uid://djekhpte5jgc4" path="res://icons/17px/blue_tick.png" id="4_3lj6o"]
[ext_resource type="Texture2D" uid="uid://dgej0uvjwwpk5" path="res://icons/17px/red_tick.png" id="5_6mhpt"]

[node name="Settings" type="PanelContainer"]
size_flags_horizontal = 2
size_flags_vertical = 0
theme = ExtResource("1_gc0em")
script = ExtResource("1_x2hje")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
size_flags_vertical = 0
metadata/_edit_lock_ = true

[node name="ShowSolvedButton" type="CheckButton" parent="VBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
text = "Show Solved"

[node name="GridContainer" type="GridContainer" parent="VBoxContainer"]
layout_mode = 2
columns = 2

[node name="RenderModeLabel" type="Label" parent="VBoxContainer/GridContainer"]
layout_mode = 2
text = "Mode:"

[node name="RenderModeOption" type="OptionButton" parent="VBoxContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
focus_mode = 3
icon_alignment = 2
selected = 0
item_count = 3
popup/item_0/text = "Realistic"
popup/item_0/icon = ExtResource("3_3j6r5")
popup/item_0/id = 0
popup/item_1/text = "Unshaded"
popup/item_1/icon = ExtResource("4_3lj6o")
popup/item_1/id = 1
popup/item_2/text = "Colorized"
popup/item_2/icon = ExtResource("5_6mhpt")
popup/item_2/id = 2

[node name="DebugButton" type="CheckButton" parent="VBoxContainer"]
visible = false
layout_mode = 2
text = "DEBUG"

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="SolveCountriesButton" type="Button" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
focus_mode = 3
text = "Solve all Countries"
icon = ExtResource("2_3ykye")
icon_alignment = 2

[node name="SolveCapitalButton" type="Button" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
focus_mode = 3
text = "Solve all Capitals"
icon = ExtResource("2_3ykye")
icon_alignment = 2

[node name="ResetButton" type="Button" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
focus_mode = 3
text = "Reset Solved"
icon = ExtResource("2_nkug2")
icon_alignment = 2
